# magicsquare

./: .gitignore  Readme.md  pyproject.toml
src/square/: checker.py  generator.py
tests/: conftest.py  test_checker.py
